created contact page and contents

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <!--navbar-->
   <header>
     <nav class="navbar navbar-custom">
       <div class="container d-sm-flex justify-content-center justify-content-md-between">
@@ -21,6 +22,8 @@
       </div>
     </nav>
   </header>
+  <!--end of navbar-->
+  <!--jumbotron-->
   <section>
     <div class="jumbotron jumbotron-fluid jumbotron-custom">
       <div class="container">
@@ -33,213 +36,226 @@
         <p>Knowledgeable in the basics of JAVA, C, Javascipt. Currently diving deeper in Javascript and Javascript
           framework Angular.</p>
         <div class="buttons d-flex justify-content-center">
-          <a class="btn-primary btn-lg text-center" id="btn-custom1" href="#" role="button">Let's Talk</a>
+          <a class="btn-primary btn-lg text-center" id="btn-custom1" href="#contact-page" role="button">Let's Talk</a>
           <a class="btn-primary btn-lg text-center" id="btn-custom2" href="#projects" role="button">My Projects</a>
         </div>
       </div>
     </div>
-  
-  <section id="projects" class="projects">
-    <div class="container">
-      <div class="row">
-        <a href="#" class="col-lg-6 col-md-6">
-          <div class="content">
-            <label>Project 1</label>
-            <img class="img-proj" src="assets/project1.png">
+    <!--end of jumbotron-->
+    <!--projects-->
+    <section id="projects" class="projects">
+      <div class="container">
+        <div class="row">
+          <a href="#" class="col-lg-6 col-md-6">
+            <div class="content">
+              <label>Project 1</label>
+              <img class="img-proj" src="assets/project1.png">
 
-            <p class="text-justify">It uses utility classes for typography and spacing to space
-              content out within the larger container.
-              It uses utility classes for typography and spacing to space
-              content out within the larger container.</p>
-          </div>
-        </a>
-        <a href="#" class="col-lg-6 col-md-6">
-          <div class="content">
-            <label>Project 2</label>
-            <img class="img-proj" src="assets/project2.png">
+              <p class="text-justify">It uses utility classes for typography and spacing to space
+                content out within the larger container.
+                It uses utility classes for typography and spacing to space
+                content out within the larger container.</p>
+            </div>
+          </a>
+          <a href="#" class="col-lg-6 col-md-6">
+            <div class="content">
+              <label>Project 2</label>
+              <img class="img-proj" src="assets/project2.png">
 
-            <p class="text-justify">It uses utility classes for typography and spacing to space
-              content out within the larger container.
-              It uses utility classes for typography and spacing to space
-              content out within the larger container.</p>
-          </div>
-        </a>
-        <a href="#" class="col-lg-6 col-md-6">
-          <div class="content">
-            <label>Project 3</label>
-            <img class="img-proj" src="assets/project3.png">
+              <p class="text-justify">It uses utility classes for typography and spacing to space
+                content out within the larger container.
+                It uses utility classes for typography and spacing to space
+                content out within the larger container.</p>
+            </div>
+          </a>
+          <a href="#" class="col-lg-6 col-md-6">
+            <div class="content">
+              <label>Project 3</label>
+              <img class="img-proj" src="assets/project3.png">
 
-            <p class="text-justify">It uses utility classes for typography and spacing to space
-              content out within the larger container.
-              It uses utility classes for typography and spacing to space
-              content out within the larger container.</p>
-          </div>
-        </a>
-        <a href="#" class="col-lg-6 col-md-6">
-          <div class="content">
-            <label>Project 4</label>
-            <img class="img-proj" src="assets/project4.jpeg">
+              <p class="text-justify">It uses utility classes for typography and spacing to space
+                content out within the larger container.
+                It uses utility classes for typography and spacing to space
+                content out within the larger container.</p>
+            </div>
+          </a>
+          <a href="#" class="col-lg-6 col-md-6">
+            <div class="content">
+              <label>Project 4</label>
+              <img class="img-proj" src="assets/project4.jpeg">
 
-            <p class="text-justify">It uses utility classes for typography and spacing to space
-              content out within the larger container.
-              It uses utility classes for typography and spacing to space
-              content out within the larger container.</p>
-          </div>
-        </a>
-        <a href="#" class="col-lg-6 col-md-6">
-          <div class="content">
-            <label>Project 5</label>
-            <img class="img-proj" src="assets/project5.jpg">
+              <p class="text-justify">It uses utility classes for typography and spacing to space
+                content out within the larger container.
+                It uses utility classes for typography and spacing to space
+                content out within the larger container.</p>
+            </div>
+          </a>
+          <a href="#" class="col-lg-6 col-md-6">
+            <div class="content">
+              <label>Project 5</label>
+              <img class="img-proj" src="assets/project5.jpg">
 
-            <p class="text-justify">It uses utility classes for typography and spacing to space
-              content out within the larger container.
-              It uses utility classes for typography and spacing to space
-              content out within the larger container.</p>
-          </div>
-        </a>
-        <a href="#" class="col-lg-6 col-md-6">
-          <div class="content">
-            <label>Project 6</label>
-            <img class="img-proj" src="assets/project6.png">
+              <p class="text-justify">It uses utility classes for typography and spacing to space
+                content out within the larger container.
+                It uses utility classes for typography and spacing to space
+                content out within the larger container.</p>
+            </div>
+          </a>
+          <a href="#" class="col-lg-6 col-md-6">
+            <div class="content">
+              <label>Project 6</label>
+              <img class="img-proj" src="assets/project6.png">
 
-            <p class="text-justify">It uses utility classes for typography and spacing to space
-              content out within the larger container.
-              It uses utility classes for typography and spacing to space
-              content out within the larger container.</p>
-          </div>
-        </a>
-        <a href="#" class="col-lg-6 col-md-6">
-          <div class="content">
-            <label>Project 6</label>
-            <img class="img-proj" src="assets/project6.png">
+              <p class="text-justify">It uses utility classes for typography and spacing to space
+                content out within the larger container.
+                It uses utility classes for typography and spacing to space
+                content out within the larger container.</p>
+            </div>
+          </a>
+          <a href="#" class="col-lg-6 col-md-6">
+            <div class="content">
+              <label>Project 6</label>
+              <img class="img-proj" src="assets/project6.png">
 
-            <p>It uses utility classes for typography and spacing to space
-              content out within the larger container.
-              It uses utility classes for typography and spacing to space
-              content out within the larger container.</p>
-          </div>
-        </a>
-        <a href="#" class="col-lg-6 col-md-6">
-          <div class="content">
-            <label>Project 6</label>
-            <img class="img-proj" src="assets/project6.png">
+              <p>It uses utility classes for typography and spacing to space
+                content out within the larger container.
+                It uses utility classes for typography and spacing to space
+                content out within the larger container.</p>
+            </div>
+          </a>
+          <a href="#" class="col-lg-6 col-md-6">
+            <div class="content">
+              <label>Project 6</label>
+              <img class="img-proj" src="assets/project6.png">
 
-            <p class="text-justify">It uses utility classes for typography and spacing to space
-              content out within the larger container.
-              It uses utility classes for typography and spacing to space
-              content out within the larger container.</p>
-          </div>
-        </a>
-        <a href="#" class="col-lg-6 col-md-6">
-          <div class="content">
-            <label>Project 6</label>
-            <img class="img-proj" src="assets/project6.png">
+              <p class="text-justify">It uses utility classes for typography and spacing to space
+                content out within the larger container.
+                It uses utility classes for typography and spacing to space
+                content out within the larger container.</p>
+            </div>
+          </a>
+          <a href="#" class="col-lg-6 col-md-6">
+            <div class="content">
+              <label>Project 6</label>
+              <img class="img-proj" src="assets/project6.png">
 
-            <p class="text-justify">It uses utility classes for typography and spacing to space
-              content out within the larger container.
-              It uses utility classes for typography and spacing to space
-              content out within the larger container.</p>
-          </div>
-        </a>
+              <p class="text-justify">It uses utility classes for typography and spacing to space
+                content out within the larger container.
+                It uses utility classes for typography and spacing to space
+                content out within the larger container.</p>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!--end of projects-->
+    <!--contact page-->
+    <section id="contact-page" class="container">
+    <div class="row">
+      <div class="col-8">
+        <h1>My pleasure to help you!</h1>
+        <p>Email Address: <a href="jerwin.mathew@gmail.com">jerwin.mathew@gmail.com</a></p>
+        <p>Facebook: <a href="">facebook.com/jerwin1010110101</a></p>
+        <p>Linkedin: <a href="">facebook.com/jerwin1010110101</a></p>
       </div>
     </div>
-  </section>
+    </section>
+    <!--end of contact page-->
+    <!-- Footer -->
+    <footer class="page-footer font-small blue pt-4">
 
-  <!-- Footer -->
-  <footer class="page-footer font-small blue pt-4">
+      <!-- Footer Links -->
+      <div class="container-fluid text-center text-md-left">
 
-    <!-- Footer Links -->
-    <div class="container-fluid text-center text-md-left">
+        <!-- Grid row -->
+        <div class="row">
 
-      <!-- Grid row -->
-      <div class="row">
+          <!-- Grid column -->
+          <div class="col-md-6 mt-md-0 mt-3">
 
-        <!-- Grid column -->
-        <div class="col-md-6 mt-md-0 mt-3">
+            <!-- Content -->
+            <h5 class="text-uppercase">Footer Content</h5>
+            <p>Here you can use rows and columns to organize your footer content.</p>
 
-          <!-- Content -->
-          <h5 class="text-uppercase">Footer Content</h5>
-          <p>Here you can use rows and columns to organize your footer content.</p>
+          </div>
+          <!-- Grid column -->
+
+          <hr class="clearfix w-100 d-md-none pb-3">
+
+          <!-- Grid column -->
+          <div class="col-md-3 mb-md-0 mb-3">
+
+            <!-- Links -->
+            <h5 class="text-uppercase">Links</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <a href="#!">Link 1</a>
+              </li>
+              <li>
+                <a href="#!">Link 2</a>
+              </li>
+              <li>
+                <a href="#!">Link 3</a>
+              </li>
+              <li>
+                <a href="#!">Link 4</a>
+              </li>
+            </ul>
+
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-3 mb-md-0 mb-3">
+
+            <!-- Links -->
+            <h5 class="text-uppercase">Links</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <a href="#!">Link 1</a>
+              </li>
+              <li>
+                <a href="#!">Link 2</a>
+              </li>
+              <li>
+                <a href="#!">Link 3</a>
+              </li>
+              <li>
+                <a href="#!">Link 4</a>
+              </li>
+            </ul>
+
+          </div>
+          <!-- Grid column -->
 
         </div>
-        <!-- Grid column -->
-
-        <hr class="clearfix w-100 d-md-none pb-3">
-
-        <!-- Grid column -->
-        <div class="col-md-3 mb-md-0 mb-3">
-
-          <!-- Links -->
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Link 1</a>
-            </li>
-            <li>
-              <a href="#!">Link 2</a>
-            </li>
-            <li>
-              <a href="#!">Link 3</a>
-            </li>
-            <li>
-              <a href="#!">Link 4</a>
-            </li>
-          </ul>
-
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-3 mb-md-0 mb-3">
-
-          <!-- Links -->
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Link 1</a>
-            </li>
-            <li>
-              <a href="#!">Link 2</a>
-            </li>
-            <li>
-              <a href="#!">Link 3</a>
-            </li>
-            <li>
-              <a href="#!">Link 4</a>
-            </li>
-          </ul>
-
-        </div>
-        <!-- Grid column -->
+        <!-- Grid row -->
 
       </div>
-      <!-- Grid row -->
+      <!-- Footer Links -->
 
-    </div>
-    <!-- Footer Links -->
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+      </div>
+      <!-- Copyright -->
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-    </div>
-    <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
 
-  </footer>
-  <!-- Footer -->
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
