added links to contact page

--- a/index.html
+++ b/index.html
@@ -150,15 +150,17 @@
     </section>
     <!--end of projects-->
     <!--contact page-->
-    <section id="contact-page" class="container">
+    <section id="contact-page">
+    <div class="container">
     <div class="row">
-      <div class="col-8">
+      <div class="col-12 text-center">
         <h1>My pleasure to help you!</h1>
-        <p>Email Address: <a href="jerwin.mathew@gmail.com">jerwin.mathew@gmail.com</a></p>
-        <p>Facebook: <a href="">facebook.com/jerwin1010110101</a></p>
-        <p>Linkedin: <a href="">facebook.com/jerwin1010110101</a></p>
+        <p>Email Address: <a href="https://www.jerwin.mathew@gmail.com" target="-blank">jerwin.mathew@gmail.com</a></p>
+        <p>Facebook: <a href="https://www.facebook.com/jerwin1010110101" target="-blank" >facebook.com/jerwin1010110101</a></p>
+        <p>Youtube Channel: <a href="https://www.youtube.com/channel/UCnQTbGm0KaKT6B2WUtCJBkw">Coco Coding</a></p>
       </div>
     </div>
+  </div>
     </section>
     <!--end of contact page-->
     <!-- Footer -->
