--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script src="https://kit.fontawesome.com/66ab7b39b4.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="css/style.css" rel="stylesheet">
+
   <title>Jerwin Mathew Aton | Porfolio</title>
 </head>
 
@@ -154,7 +156,7 @@
     <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-        <h1>My pleasure to help you!</h1>
+        <h1>My pleasure to help you!</h1>you
         <p>Email Address: <a href="https://www.jerwin.mathew@gmail.com" target="-blank">jerwin.mathew@gmail.com</a></p>
         <p>Facebook: <a href="https://www.facebook.com/jerwin1010110101" target="-blank" >facebook.com/jerwin1010110101</a></p>
         <p>Youtube Channel: <a href="https://www.youtube.com/channel/UCnQTbGm0KaKT6B2WUtCJBkw">Coco Coding</a></p>
