added icons on contact page

--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
     <div class="row">
       <div class="col-12 text-center">
         <h1>My pleasure to help you!</h1>you
-        <p>Email Address: <a href="https://www.jerwin.mathew@gmail.com" target="-blank">jerwin.mathew@gmail.com</a></p>
-        <p>Facebook: <a href="https://www.facebook.com/jerwin1010110101" target="-blank" >facebook.com/jerwin1010110101</a></p>
-        <p>Youtube Channel: <a href="https://www.youtube.com/channel/UCnQTbGm0KaKT6B2WUtCJBkw">Coco Coding</a></p>
+        <p><i class="fas fa-envelope icons" id="gm"></i>Email Address: <a href="https://www.jerwin.mathew@gmail.com" target="-blank">jerwin.mathew@gmail.com</a></p>
+        <p><i class="fab fa-facebook icons" id="fb"></i>Facebook: <a href="https://www.facebook.com/jerwin1010110101" target="-blank" >facebook.com/jerwin1010110101</a></p>
+        <p><i class="fab fa-youtube icons" id="yt"></i>Youtube Channel: <a href="https://www.youtube.com/channel/UCnQTbGm0KaKT6B2WUtCJBkw">Coco Coding</a></p>
       </div>
     </div>
   </div>
