added icons on main buttons

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <p>Knowledgeable in the basics of JAVA, C, Javascipt. Currently diving deeper in Javascript and Javascript
           framework Angular.</p>
         <div class="buttons d-flex justify-content-center">
-          <a class="btn-primary btn-lg text-center" id="btn-custom1" href="#contact-page" role="button">Let's Talk</a>
-          <a class="btn-primary btn-lg text-center" id="btn-custom2" href="#projects" role="button">My Projects</a>
+          <a class="btn-primary btn-lg text-center" id="btn-custom1" href="#contact-page" role="button"><i class="far fa-paper-plane icons" id="lets-talk-icon"></i>Let's Talk</a>
+          <a class="btn-primary btn-lg text-center" id="btn-custom2" href="#projects" role="button"><i class="far fa-folder-open icons" id="project-icon"></i>My Projects</a>
         </div>
       </div>
     </div>
@@ -156,8 +156,8 @@
     <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-        <h1>My pleasure to help you!</h1>you
-        <p><i class="fas fa-envelope icons" id="gm"></i>Email Address: <a href="https://www.jerwin.mathew@gmail.com" target="-blank">jerwin.mathew@gmail.com</a></p>
+        <h1>My pleasure to help you!</h1>
+        <p><i class="icons" id="gm"><img src="assets/gmail-icon.png"></i>Email Address: <a href="https://www.jerwin.mathew@gmail.com" target="-blank">jerwin.mathew@gmail.com</a></p>
         <p><i class="fab fa-facebook icons" id="fb"></i>Facebook: <a href="https://www.facebook.com/jerwin1010110101" target="-blank" >facebook.com/jerwin1010110101</a></p>
         <p><i class="fab fa-youtube icons" id="yt"></i>Youtube Channel: <a href="https://www.youtube.com/channel/UCnQTbGm0KaKT6B2WUtCJBkw">Coco Coding</a></p>
       </div>
