--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
       
               <form class="contact100-form validate-form">
                 <span class="contact100-form-title">
-                  My pleasure to help you!
+                  My pleasure to help you!<br>
+                  Get in touch with me
                 </span>
       
                 <div class="wrap-input100 validate-input" data-validate = "Name is required">
@@ -206,10 +207,10 @@
                   <button class="contact100-form-btn">
                     Send
                   </button>
-                  <div class="contacts">
-                  <p><i class="icons" id="gm"><img src="assets/icons/gmail-icon.png"></i>Email Address: <a href="https://www.jerwin.mathew@gmail.com" target="-blank">jerwin.mathew@gmail.com</a></p>
-                  <p><i class="fab fa-facebook icons" id="fb"></i>Facebook: <a href="https://www.facebook.com/jerwin1010110101" target="-blank" >facebook.com/jerwin1010110101</a></p>
-                  <p><i class="fab fa-youtube icons" id="yt"></i>Youtube Channel: <a href="https://www.youtube.com/channel/UCnQTbGm0KaKT6B2WUtCJBkw">Coco Coding</a></p>
+                  <div class="contacts d-flex flex-column">
+                  <a  href="https://www.jerwin.mathew@gmail.com" target="-blank"><i class="icons" id="gm"><img src="assets/icons/gmail-icon.png"></i><span class="icon-label">Email Address:</span>jerwin.mathew@gmail.com</a>
+                  <a  href="https://www.facebook.com/jerwin1010110101" target="-blank"> <i class="fab fa-facebook icons" id="fb"></i><span class="icon-label">Facebook:</span>Jerwin Mathew Aton</a>
+                  <a href="https://www.youtube.com/channel/UCnQTbGm0KaKT6B2WUtCJBkw" target="_blank"><i class="fab fa-youtube icons" id="yt"></i><span class="icon-label">Youtube Channel:</span>Coco Coding</a>
                 </div>
                 </div>
               </form>
