changed wendys pic

--- a/wenjiely/index.html
+++ b/wenjiely/index.html
@@ -231,7 +231,7 @@
 				</div>
 				<div class="img-container">
 					<div class="tm-img-circle-border absolute-center" data-comment="Wendy Aton"  id="author5">
-						<img src="images/wenjie.jpg" alt="Testimonial 5" class="img-circle tm-img-testimonial">
+						<img src="images/wendy.jpg" alt="Testimonial 5" class="img-circle tm-img-testimonial">
 					</div>					
 				</div>
 			</div>
