fixed mp3 again

--- a/wenjiely/index.html
+++ b/wenjiely/index.html
@@ -35,10 +35,10 @@
 						<h2 class="tm-home-subtitle tm-orange-text text-uppercase">to you ate Wenjiely</h2>
 						<div class="tm-home-description">
 							<p style="color: white;">Best wishes po sayo ate and more birthdays to come! Pagpasensyahan mona po itong regalo ko hehe ito lang po kaya ko sa ngayon.</p>
-							<audio autoplay loop>
-								<source src="music/onepiece.mp3" type="audio/mpeg">
-							  Your browser does not support the audio element.
-							  </audio>
+							<audio autoplay="true" loop="true" preload="">  
+								<source src="music/onepiece.mp3" type="audio/mpeg"></source> 
+								Your browser does not support the audio element. 
+							</audio> 
 						</div>					
 						
 					</div>					
