--- a/julieannvico2/index.html
+++ b/julieannvico2/index.html
@@ -57,14 +57,10 @@
       <nav id="nav">
         <ul class="links" style="font-size: 2em">
           <li class="active"><a href="index.html">Mga Likha</a></li>
-          <li><a href="bionote.html">Bionote</a></li>
-          <li><a href="sintesis.html">Pagbuo ng Sintesis</a></li>
-          <li><a href="talumpati.html">Pagsulat ng Talumpati</a></li>
-          <li><a href="posisyong-papel.html">Pagbuo ng Posisyong Papel</a></li>
-          <li><a href="repliktibong-sanaysay.html">Pagsulat ng Repliktibong Sanaysay</a></li>
-          <li><a href="lakbay-sanaysay.html">Lakbay-Sanaysay</a></li>
-          <li><a href="larawang-sanaysay.html">Larawang-Sanaysay</a></li>
-          <li><a href="katitikan-ng-pulong.html">Katitikan ng Pulong</a></li>
+          <li><a href="output1.html">Output 1</a></li>
+          <li><a href="output2.html">Output 2</a></li>
+          <li><a href="output3.html">Output 3</a></li>
+          <li><a href="output4.html">Output 4</a></li>
         </ul>
       </nav>
 
