--- a/julieannvico2/output1.html
+++ b/julieannvico2/output1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Mga Likha | Bionote</title>
+		<title>Mga Likha | Output 1</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,21 +19,17 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="#" class="logo">BIONOTE</a>
+						<a href="#" class="logo">Output 1</a>
 					</header>
 
 				<!-- Nav -->
 				<nav id="nav">
 					<ul class="links" style="font-size: 2em">
-					  <li><a href="index.html">Mga Likha</a></li>
-					  <li class="active"><a href="bionote.html">Bionote</a></li>
-					  <li><a href="sintesis.html">Pagbuo ng Sintesis</a></li>
-					  <li><a href="talumpati.html">Pagsulat ng Talumpati</a></li>
-					  <li><a href="posisyong-papel.html">Pagbuo ng Posisyong Papel</a></li>
-					  <li><a href="repliktibong-sanaysay.html">Pagsulat ng Repliktibong Sanaysay</a></li>
-					  <li><a href="lakbay-sanaysay.html">Lakbay-Sanaysay</a></li>
-					  <li><a href="larawang-sanaysay.html">Larawang-Sanaysay</a></li>
-					  <li><a href="katitikan-ng-pulong.html">Katitikan ng Pulong</a></li>
+						<li><a href="index.html">Mga Likha</a></li>
+						<li  class="active"><a href="output1.html">Output 1</a></li>
+						<li><a href="output2.html">Output 2</a></li>
+						<li><a href="output3.html">Output 3</a></li>
+						<li><a href="output4.html">Output 4</a></li>
 					</ul>
 				  </nav>
 
