re organize links in index.html

--- a/julieannvico2/index.html
+++ b/julieannvico2/index.html
@@ -24,15 +24,15 @@
       <!-- Intro -->
       <div id="intro">
         <h1>
-          TIPON NG MGA SULATING PANG AKADEMIK<br />
-          NI JULIE ANN V. VINCO
+          E-Portfolio<br />
+          Contemporary Philippine Arts from the Region<br />
+          JULIE ANN V. VINCO
         </h1>
         <h2>12-STEM</h2>
         <p>
           Maligayang pagbati! Ako po si Julie Ann V. Vinco nag-aaral sa
           Concordia College.<br />
           Ikinagagalak ko po na ibinuksan ninyo ang aking website.<br />
-          Ito ay tungkol lamang sa sulating pang akademik at wala ng iba pa.<br />
           Nawa’y kayo ay matuwa sa inyong babasahin na aking ginawa.<br />
           Magandang araw po at maligayang pagbati sa inyo. Maraming Salamat!
           <br />
@@ -84,26 +84,23 @@
         <section class="posts" id="posts">
           <article>
             <header>
-              <span class="date">Septiyembre 24, 2020</span>
-              <h2>BIONOTE</h2>
+              <h2>Output 1</h2>
             </header>
-            <a href="bionote.html" class="image fit"
-              ><img src="images/pic01.jpg" alt=""
+            <a href="output1.html" class="image fit"
+              ><img src="images/nakpil-and-locsin.png" alt=""
             /></a>
             <p>
-              Siya si Lyne Gestat, dalawampu’t dalawa taong gulang. Siya ay
-              mahilig...
+              Nakpil, architect, teacher, and civic leader is a pioneer and innovator in Philippine architecture....
             </p>
             <ul class="actions special">
-              <li><a href="bionote.html" class="button">Full Story</a></li>
+              <li><a href="output1.html" class="button">Full Story</a></li>
             </ul>
           </article>
           <article>
             <header>
-              <span class="date">Septiyembre 23, 2020</span>
-              <h2>PAGBUO NG SINTESIS<br /></h2>
+              <h2>Output 2<br /></h2>
             </header>
-            <a href="sintesis.html" class="image fit"
+            <a href="output2.html" class="image fit"
               ><img src="images/pic02.jpg" alt=""
             /></a>
             <p>
@@ -112,7 +109,7 @@
               malaking nilalang na may kakaibang lakas at ...
             </p>
             <ul class="actions special">
-              <li><a href="sintesis.html" class="button">Full Story</a></li>
+              <li><a href="output2.html" class="button">Full Story</a></li>
             </ul>
           </article>
           <article>
@@ -120,7 +117,7 @@
               <span class="date">October 30, 2020</span>
               <h2>PAGBUO NG POSISYONG PAPEL<br /></h2>
             </header>
-            <a href="posisyong-papel.html" class="image fit"
+            <a href="output2.html" class="image fit"
               ><img src="images/pic03.jpg" alt=""
             /></a>
             <p>
@@ -130,16 +127,15 @@
             </p>
             <ul class="actions special">
               <li>
-                <a href="posisyong-papel.html" class="button">Full Story</a>
+                <a href="output2.html" class="button">Full Story</a>
               </li>
             </ul>
           </article>
           <article>
             <header>
-              <span class="date">Oktubre 10, 2020</span>
-              <h2>PAGSULAT NG TALUMPATI</h2>
+              <h2>Output 3</h2>
             </header>
-            <a href="talumpati.html" class="image fit"
+            <a href="output3.html" class="image fit"
               ><img src="images/pic04.jpg" alt=""
             /></a>
             <p>
@@ -147,15 +143,14 @@
               sumabay sa indak ng bawat pagsubok, damahin ang saya ...
             </p>
             <ul class="actions special">
-              <li><a href="talumpati.html" class="button">Full Story</a></li>
+              <li><a href="output3.html" class="button">Full Story</a></li>
             </ul>
           </article>
           <article>
             <header>
-              <span class="date">Nobyembre 24, 2020</span>
-              <h2>PAGSULAT NG REPLIKTIBONG SANAYSAY</h2>
+              <h2>Output 4</h2>
             </header>
-            <a href="repliktibong-sanaysay.html" class="image fit"
+            <a href="Output 4.html" class="image fit"
               ><img src="images/pic05.jpg" alt=""
             /></a>
             <p>
@@ -166,72 +161,13 @@
             </p>
             <ul class="actions special">
               <li>
-                <a href="repliktibong-sanaysay.html" class="button"
+                <a href="Output 4.html" class="button"
                   >Full Story</a
                 >
               </li>
             </ul>
           </article>
-          <article>
-            <header>
-              <span class="date">Disyembre 7, 2020</span>
-              <h2>LAKBAY SANAYSAY</h2>
-            </header>
-            <a href="lakbay-sanaysay.html" class="image fit"
-              ><img src="images/pic06.jpg" alt=""
-            /></a>
-            <p>
-              Ang Glory Hill ay isa sa mga kilalang lugar sa Southern Negros sa
-              Isabela ng dahil sa kilalang malaking krus na pinagdadasalan ng
-              bawat tao kapag mahal na araw. Ito ay naka pwesto sa pinakatuktok
-              ng bundok...
-            </p>
-            <ul class="actions special">
-              <li>
-                <a href="lakbay-sanaysay.html" class="button">Full Story</a>
-              </li>
-            </ul>
-          </article>
-          <article>
-            <header>
-              <span class="date">Disyembre 7, 2020</span>
-              <h2>LARAWANG SANAYSAY</h2>
-            </header>
-            <a href="larawang-sanaysay.html" class="image fit"
-              ><img src="images/pic07.jpg" alt=""
-            /></a>
-            <p>
-              Ang paglubog ng araw ay pwedeng magdala ng pahiwatig sa atin ng
-              bagong pag-asa o di kaya ito ay ipinapakita sa atin na kahit tayo
-              ay aabot talaga sa punto ng buhay natin na tayo ay lulubog sa
-              problema man o pangyayari
-            </p>
-            <ul class="actions special">
-              <li>
-                <a href="larawang-sanaysay.html" class="button">Full Story</a>
-              </li>
-            </ul>
-          </article>
-          <article>
-            <header>
-              <span class="date">Disyembre 10, 2020</span>
-              <h2>KATITIKAN NG PULONG</h2>
-            </header>
-            <a href="katitikan-ng-pulong.html" class="image fit"
-              ><img src="images/pic08.jpg" alt=""
-            /></a>
-            <p>
-              Pagsisimula ng Pulong Ang pagpupulong ay itinayo ni Bb. Laksha A.
-              Mañalac, ang Pangulo ng pagpupulong sa pangkat tatlo sa ganap na
-              ika-8:30 ng umaga, at ito ay pinasimulan sa pamamagitan ng isang
-              panalangin na pinangunahan ng pangulo...
-            </p>
-            <ul class="actions special">
-              <li>
-                <a href="katitikan-ng-pulong.html" class="button">Full Story</a>
-              </li>
-            </ul>
-          </article>
+
         </section>
       </div>
 
