--- a/julieannvico2/index.html
+++ b/julieannvico2/index.html
@@ -101,12 +101,10 @@
               <h2>Output 2<br /></h2>
             </header>
             <a href="output2.html" class="image fit"
-              ><img src="images/pic02.jpg" alt=""
+              ><img src="images/output2.jpg" alt=""
             /></a>
             <p>
-              Una may isang grupo ng siyentista na may hawak ng isang hindi
-              masyadong kilalang nilalang at ito ay ang yeti. Ang yeti ay isang
-              malaking nilalang na may kakaibang lakas at ...
+              The first poem “Bonsai” by Edith Tiempo is basically a poem talking about a love of a mother, love that can be passed on or being handed over to her daughter. This poem is about love  ...
             </p>
             <ul class="actions special">
               <li><a href="output2.html" class="button">Full Story</a></li>
@@ -114,33 +112,13 @@
           </article>
           <article>
             <header>
-              <span class="date">October 30, 2020</span>
-              <h2>PAGBUO NG POSISYONG PAPEL<br /></h2>
-            </header>
-            <a href="output2.html" class="image fit"
-              ><img src="images/pic03.jpg" alt=""
-            /></a>
-            <p>
-              Sa panahon ngayon kapag ikaw ay kabilang sa LGBTQ ikaw ay
-              mahihirapan pagdating sa lipunan lalo na sa mga taong hindi
-              tanggap kung anong uri ka at...
-            </p>
-            <ul class="actions special">
-              <li>
-                <a href="output2.html" class="button">Full Story</a>
-              </li>
-            </ul>
-          </article>
-          <article>
-            <header>
               <h2>Output 3</h2>
             </header>
             <a href="output3.html" class="image fit"
-              ><img src="images/pic04.jpg" alt=""
+              ><img src="images/output3.jpg" alt=""
             /></a>
             <p>
-              Ang ating buhay ay parang isang sayaw kung saan kailangan natin
-              sumabay sa indak ng bawat pagsubok, damahin ang saya ...
+              The first one is a ballet type of dance and the four elements of dance is already present which is the body, energy, space and time so changing levels slowly then kicking your legs out quickly is ...
             </p>
             <ul class="actions special">
               <li><a href="output3.html" class="button">Full Story</a></li>
@@ -151,13 +129,10 @@
               <h2>Output 4</h2>
             </header>
             <a href="Output 4.html" class="image fit"
-              ><img src="images/pic05.jpg" alt=""
+              ><img src="images/output4.jpg" alt=""
             /></a>
             <p>
-              Halos lahat tayo ay naranasan nang mandaya kahit isang beses sa
-              buhay natin. Lalo na sa paaralan kung saan hindi ito maiiwasan.
-              Bilang isang estudyante, may pagkakataon kung saan hindi natin
-              maiwasan...
+              This movie is all about the fisherman coming from poor area, descent into social alienation and coming to manila to search for his loved one named Ligaya and this is the element of film what ...
             </p>
             <ul class="actions special">
               <li>
