--- a/julieannvico2/output1.html
+++ b/julieannvico2/output1.html
@@ -41,7 +41,11 @@
 								<header class="major">
 									<h1>Output 1</h1>
 								</header>
-								<div class="image main"><img src="" alt="" /></div>
+								<div class="image main">
+									<img src="images/outputs/E-Portfolio-julie-01.jpg" alt="" />
+									<img src="images/outputs/E-Portfolio-julie-02.jpg" alt="" />
+									<img src="images/outputs/E-Portfolio-julie-03.jpg" alt="" />
+								</div>
 							</section>
 
 					</div>
